# RedGiant

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  make.sh
src/main/: .gitignore  Makefile.am  main.cc
src/main/concurrency/: job_executor.h  message_queue.h  thread_pool_executor.h  worker.h  worker_executor.h
src/main/conf/: config-debug.json  config-release.json  feature_space.json  log4cxx-debug.xml  log4cxx-release.xml
src/main/core/: README.md
src/main/core/impl/: base_document_index-inl.h  base_document_index.h  base_event_index-inl.h  base_event_index.h  base_index-inl.h  base_index.h  base_index_impl-inl.h  base_index_impl.h  btree_expire_table.h  freezable_posting_list.h  point_index_impl-inl.h  point_index_impl.h  row_index_impl-inl.h  row_index_impl.h
src/main/core/index/: btree_expire_table.h  btree_posting_list.h  map_posting_list.h  posting_list.h  safe_posting_list.h  sequential_posting_list.h
src/main/core/lock/: spin_lock.h
src/main/core/query/: dot_product_query.h  posting_list_query.h
src/main/core/reader/: algorithms.h  dot_product_reader.h  posting_list_reader.h  reader_tree-inl.h  reader_tree.h  reader_utils.h  reader_wrapper.h  wand_reader-inl.h  wand_reader.h
src/main/core/snapshot/: snapshot.h  snapshot_reader.h
src/main/data/: Makefile.am  document.cc  document.h  document_id.cc  document_id.h  document_parser.cc  document_parser.h  document_update_request.h  feature.h  feature_cache.cc  feature_cache.h  feature_space.cc  feature_space.h  feature_space_manager.cc  feature_space_manager.h  feature_vector.cc  feature_vector.h  interm_query.h  json_parser.h  parser.h  query_request.h  query_request_parser.cc  query_request_parser.h  query_result.h
src/main/handler/: Makefile.am  document_handler.cc  document_handler.h  feed_document_handler.cc  feed_document_handler.h  query_handler.cc  query_handler.h  snapshot_handler.cc  snapshot_handler.h  test_handler.cc  test_handler.h
src/main/index/: Makefile.am  document_index.cc  document_index.h  document_index_manager.cc  document_index_manager.h  document_index_view.cc  document_index_view.h  document_query.cc  document_query.h  document_traits.h  document_update_pipeline.cc  document_update_pipeline.h  document_update_worker.cc  document_update_worker.h  index_manager.cc  index_manager.h
src/main/model/: Makefile.am  doc_features.cc  doc_features.h  document.cc  document.h  document_id.cc  document_id.h  feature.h  feature_cache.cc  feature_cache.h  feature_group.cc  feature_group.h  feature_space.cc  feature_space.h  feature_vector.cc  feature_vector.h  query_request.h  query_result.h
src/main/parser/: Makefile.am  document_parser.cc  document_parser.h  feature_cache_parser.cc  feature_cache_parser.h  json_doc_parser.cc  json_doc_parser.h  json_parser.h  parser.h  query_request_parser.cc  query_request_parser.h
src/main/pipeline/: Makefile.am  feed_document_job.h  feed_document_pipeline.cc  feed_document_pipeline.h  feed_document_request.h  feed_document_worker.cc  feed_document_worker.h
src/main/query/: Makefile.am  dummy.cc  query_executor.h  simple_query_executor.cc  simple_query_executor.h
src/main/ranking/: Makefile.am  default_model.cc  default_model.h  direct_model.cc  direct_model.h  dummy.cc  feature_mapping_model.cc  feature_mapping_model.h  model_manager.cc  model_manager.h  ranking_model.h
src/main/service/: Makefile.am  event_request_context.cc  event_request_context.h  event_response_writer.cc  event_response_writer.h  request_context.h  request_handler.h  response_writer.h  server.cc  server.h  server_instance.cc  server_instance.h
src/main/utils/: Makefile.am  cached_buffer.h  container_utils.h  json_utils.h  latency_tracker.h  logger-inl.h  logger.cc  logger.h  scope_guard.h  spin_lock.h  stop_watch.h  string_utils.h
src/main/utils/concurrency/: job_executor.h  message_queue.h  thread_pool_executor.h  worker.h  worker_executor.h
src/test/: Makefile.am
src/test/core_impl/: Makefile.am  base_index_impl_test.cc  expire_table_test.cc  freezable_posting_list_test.cc  mock_traits.h  point_index_impl_test.cc  row_index_impl_test.cc  test_main.cc
src/test/core_index/: Makefile.am  expire_table_test.cc  mock_weight.h  posting_list_test.cc  safe_posting_list_test.cc
src/test/core_reader/: Makefile.am  dot_product_reader_test.cc  mock_reader.h  wand_reader_test.cc
src/test/data/: Makefile.am  document_id_test.cc  document_parser_test.cc  feature_cache_test.cc  feature_space_manager_test.cc  feature_space_test.cc
src/test/index/: Makefile.am  document_index_manager_test.cc  document_index_test.cc
src/test/model/: Makefile.am  document_id_test.cc  feature_cache_test.cc  feature_space_test.cc
src/test/parser/: Makefile.am  document_parser_test.cc
src/test/query/: Makefile.am  simple_query_executor_test.cc
src/test/ranking/: Makefile.am  default_model_test.cc  direct_model_test.cc  feature_mapping_model_test.cc  mock_model.h  model_manager_test.cc
src/test/resources/: log4cxx.xml
src/test/service/: Makefile.am  event_request_context_test.cc  event_response_writer_test.cc  mock_handler.h  server_test.cc  test_client.h  test_main.cc
src/test/utils/: Makefile.am  cached_buffer_test.cc  string_utils_test.cc  test_main.cc
